PDF export: text alignment repaired

--- a/src/main/resources/stylesheets/specman-pdf.css
+++ b/src/main/resources/stylesheets/specman-pdf.css
@@ -1,6 +1,8 @@
 li {
   /* Concerning font size, see div */
   font-size: 15.28px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 h1 {
@@ -73,6 +75,9 @@ font[size="5"]>span { font-size: 20px; }
 
 font[size="3"] { font-size: 12px; padding-top: -10px; }
 font[size="3"]>span { font-size: 12px; }
+
+font[size="4"] { font-size: 15.28px; padding-top: -10px; }
+font[size="4"]>span { font-size: 15.28px; }
 
 font[size="2"] { font-size: 10px; padding-top: -10px; }
 font[size="2"]>span { font-size: 10px; }
